--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
             </ul>
 
-            <div class="openbtn"><div class="openbtn-area"><span></span><span></span><span></span></div></div>
+            <div class="openbtn">
+                <div class="openbtn-area"><span></span><span></span><span></span></div>
+            </div>
 
             <div class="form-popup" id="myForm">
                 <form action="/action_page.php" class="form-container">
@@ -172,19 +174,23 @@
 
                         <li> To create a welcoming, safe and happy school where everyone is valued. </li>
 
-                        <li> To promote a sense of responsibility, respect and caring attitude in all pupils and staff. </li>
+                        <li> To promote a sense of responsibility, respect and caring attitude in all pupils and staff.
+                        </li>
 
                         <li>
-                            To provide a broad, stimulating education by learning through discovery, challenge and enjoyment to
+                            To provide a broad, stimulating education by learning through discovery, challenge and
+                            enjoyment to
                             meet the needs of each individual pupil.
                         </li>
 
                         <li>
-                            To ensure that the whole school community feel included and are proud of their work and achievements
+                            To ensure that the whole school community feel included and are proud of their work and
+                            achievements
                             both in and out of school.
                         </li>
 
-                        <li> To instill confidence in pupils and staff to develop skills for learning, life and work. </li>
+                        <li> To instill confidence in pupils and staff to develop skills for learning, life and work.
+                        </li>
 
                         <li> To encourage all to reflect and self-evaluate as they strive to achieve their goals. </li>
 
@@ -235,7 +241,8 @@
         transition-timing-function: cubic-bezier(0.10.1,0.2,0.1);">
                 <!-- Opens div id L2Div -->
                 <img src="images/L.png" class="letter" id="L2" onclick="wordShow('look', 'L2Div')">
-                <p id="look" style="display: none; font-size: 50px;"> ook after each other</p> <!-- Closes div id L2Div -->
+                <p id="look" style="display: none; font-size: 50px;"> ook after each other</p>
+                <!-- Closes div id L2Div -->
             </div>
 
 
@@ -256,14 +263,14 @@
             <h1 style="display:block;"> Text Size: </h1>
             <h2 onclick="shrinkText()"> - </h2>
             <h2 onclick="enlargeText()"> + </h2>
-      
+
             <h1 style="display:block;"> Fonts: </h2>
-            <h2 onclick="changeFont('Georgia')"> Georgia </h2>
-            <h2 onclick="changeFont('Courier New')"> Courier New </h2>
-            <h2 onclick="changeFont('Arial')"> Arial </h2>
-            <h2 onclick="changeFont('Verdana')"> Verdana </h2>
-      
-          </div>
+                <h2 onclick="changeFont('Georgia')"> Georgia </h2>
+                <h2 onclick="changeFont('Courier New')"> Courier New </h2>
+                <h2 onclick="changeFont('Arial')"> Arial </h2>
+                <h2 onclick="changeFont('Verdana')"> Verdana </h2>
+
+        </div>
 
     </div>
 
@@ -276,27 +283,28 @@
 
             <a href="https://twitter.com/BarnhillPrimary">
                 <img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
-                     style="width: 60px; height:60px;">
+                    style="width: 60px; height:60px;">
             </a>
             <a href="https://secure.glowscotland.org.uk/login/login.htm">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
-                     style="width: 60px; height:60px;">
+                    style="width: 60px; height:60px;">
             </a>
             <a href="https://www.dundeecity.gov.uk/">
-                <img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt="Dundee City Council"
-                     style="width: 60px; height:60px;">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api"
+                    alt="Dundee City Council" style="width: 60px; height:60px;">
             </a>
             <a href="http://www.educationscotland.gov.uk/">
-                <img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt="Education Scotland"
-                     style="width: 60px; height:60px;">
+                <img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api"
+                    alt="Education Scotland" style="width: 60px; height:60px;">
             </a>
             <a href="https://app.parentpay.com/public/client/security/v2/#/login">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
-                     style="width: 60px; height:60px;">
+                    style="width: 60px; height:60px;">
             </a>
 
             <p id="cu"> <a href="contact.html"> Contact Us </a>
-                <br> <span id="button" onclick="showSettings()">Settings</span></p>
+                <br> <span id="button" onclick="showSettings()">Settings</span>
+            </p>
 
             <p id="cr">&#169; Barnhill Primary School 2023</p>
 
