--- a/faq.html
+++ b/faq.html
@@ -43,7 +43,9 @@
 
                 </ul>
 
-                <div class="openbtn"><div class="openbtn-area"><span></span><span></span><span></span></div></div>
+                <div class="openbtn">
+                    <div class="openbtn-area"><span></span><span></span><span></span></div>
+                </div>
 
                 <div class="form-popup" id="myForm">
                     <form action="/action_page.php" class="form-container">
@@ -103,32 +105,43 @@
         <h1 id="pageTitle"> Frequently Asked Questions</h1>
 
         <div class="QnA">
-            <h2 class="question dropdownTitle" onclick="hideItem('a1', 'FAQ1')"> When does the school open and close?<p id="FAQ1" style="display:inline;">&#9660;</p></h2>
+            <h2 class="question dropdownTitle" onclick="hideItem('a1', 'FAQ1')"> When does the school open and close?<p
+                    id="FAQ1" style="display:inline;">&#9660;</p>
+            </h2>
             <p class="answer" id="a1">A: The school is open from 09:00 to 15:15, Monday to Friday.</p>
         </div>
 
         <div class="QnA">
-            <h2 class="question dropdownTitle" onclick="hideItem('a2', 'FAQ2')"> When are the pupil's break and lunch times?<p id="FAQ2" style="display:inline;">&#9660;</p></h2>
+            <h2 class="question dropdownTitle" onclick="hideItem('a2', 'FAQ2')"> When are the pupil's break and lunch
+                times?<p id="FAQ2" style="display:inline;">&#9660;</p>
+            </h2>
             <p class="answer" id="a2">A: Break is from 11:10 to 11:30<br>Lunch is from 13:15 to 14:00</p>
         </div>
 
         <div class="QnA">
-            <h2 class="question dropdownTitle QnA" onclick="hideItem('a3', 'FAQ3')">School Dinners<p id="FAQ3" style="display:inline;">&#9660;</p></h2>
+            <h2 class="question dropdownTitle QnA" onclick="hideItem('a3', 'FAQ3')">School Dinners<p id="FAQ3"
+                    style="display:inline;">&#9660;</p>
+            </h2>
             <p class="answer" id="a3">
                 A: School Dinners are free for P1-5 and cost £2.10 per day for P6-7. Please follow the link to
                 Parent Pay if you
-                do not already have an account. Children make a choice of RED, BLUE or ORANGE lunch in the morning, in order
-                that they can have the dinner of their choice. Dinners can be ordered from home up to 4 weeks in advance on
+                do not already have an account. Children make a choice of RED, BLUE or ORANGE lunch in the morning, in
+                order
+                that they can have the dinner of their choice. Dinners can be ordered from home up to 4 weeks in advance
+                on
                 Parent Pay. Menus are updated regularly by Tayside Contracts.
             </p>
         </div>
 
         <div class="QnA">
-            <h2 class="question dropdownTitle QnA" c onclick="hideItem('a4', 'FAQ4')">Strikes or Snow days<p id="FAQ4" style="display:inline;">&#9660;</p></h2>
+            <h2 class="question dropdownTitle QnA" c onclick="hideItem('a4', 'FAQ4')">Strikes or Snow days<p id="FAQ4"
+                    style="display:inline;">&#9660;</p>
+            </h2>
             <p class="answer" id="a4">
                 A: In the case of the school being shut due to dangerous weather conditions or strikes, parents
                 will recieve a
-                text in the morning at 08:00. Children may continue to learn via the links on our <a href="homeLearning.html">
+                text in the morning at 08:00. Children may continue to learn via the links on our <a
+                    href="homeLearning.html">
                     Home Learning page
                 </a> if they so wish.
             </p>
@@ -138,7 +151,8 @@
 
         <p id="txt">
             For more information on the school uniform click <a href="uniform.html">here</a> <br>For more information on
-            our privacy policy, click <a href="https://www.dundeecity.gov.uk/service-area/children-and-families-service/schools-privacy-statement">here</a>
+            our privacy policy, click <a
+                href="https://www.dundeecity.gov.uk/service-area/children-and-families-service/schools-privacy-statement">here</a>
         </p>
 
         <div id="settingsPopup">
@@ -146,14 +160,14 @@
             <h1 style="display:block;"> Text Size: </h1>
             <h2 onclick="shrinkText()"> - </h2>
             <h2 onclick="enlargeText()"> + </h2>
-      
+
             <h1 style="display:block;"> Fonts: </h2>
-            <h2 onclick="changeFont('Georgia')"> Georgia </h2>
-            <h2 onclick="changeFont('Courier New')"> Courier New </h2>
-            <h2 onclick="changeFont('Arial')"> Arial </h2>
-            <h2 onclick="changeFont('Verdana')"> Verdana </h2>
-      
-          </div>
+                <h2 onclick="changeFont('Georgia')"> Georgia </h2>
+                <h2 onclick="changeFont('Courier New')"> Courier New </h2>
+                <h2 onclick="changeFont('Arial')"> Arial </h2>
+                <h2 onclick="changeFont('Verdana')"> Verdana </h2>
+
+        </div>
 
     </div>
 
@@ -168,28 +182,29 @@
 
             <a href="https://twitter.com/BarnhillPrimary">
                 <img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
-                     style="width: 60px; height:60px;">
+                    style="width: 60px; height:60px;">
             </a>
             <a href="https://secure.glowscotland.org.uk/login/login.htm">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
-                     style="width: 60px; height:60px;">
+                    style="width: 60px; height:60px;">
             </a>
             <a href="https://www.dundeecity.gov.uk/">
-                <img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api" alt="Dundee City Council"
-                     style="width: 60px; height:60px;">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api"
+                    alt="Dundee City Council" style="width: 60px; height:60px;">
             </a>
             <a href="http://www.educationscotland.gov.uk/">
-                <img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api" alt="Education Scotland"
-                     style="width: 60px; height:60px;">
+                <img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api"
+                    alt="Education Scotland" style="width: 60px; height:60px;">
             </a>
             <a href="https://app.parentpay.com/public/client/security/v2/#/login">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
-                     style="width: 60px; height:60px;">
+                    style="width: 60px; height:60px;">
             </a>
 
 
             <p id="cu"> <a href="contact.html"> Contact Us </a>
-                <br> <span id="button" onclick="showSettings()">Settings</span></p>
+                <br> <span id="button" onclick="showSettings()">Settings</span>
+            </p>
 
             <p id="cr">&#169; Barnhill Primary School 2023</p>
 
