--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
                 <ul>
 
-                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
+                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="/images/bpslogo.png"></a>
 
                     <li><a href="index.html">Home</a></li>
 
@@ -113,24 +113,12 @@
                 <div id="email">
                     <h2>Email</h2>
                     <ul>
-
-
                         <li>Principle: abruce174@dundeeschools.scot</li>
-
-
                         <li>Deputy Head: psmith966@dundeeschools.scot</li>
                         <li>School: barnhillprimary@dundeeschools.scot </li>
                     </ul>
                 </div>
             </div>
-
-
-
-
-
-
-
-
 
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3672835063953!2d-2.8576694596827665!3d56.478660535962945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1708007344974!5m2!1sen!2suk"
@@ -138,8 +126,6 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         </div>
-
-
 
 
         <div id="settingsPopup">
