--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <ul>
 
-                <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="images/bpslogo.png"></a>
+                <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="bpslogo.png"></a>
 
                 <li><a href="index.html">Home</a></li>
 
@@ -126,21 +126,21 @@
             <div class="mySlides fade">
                 <!-- Opens div class mySlides fade -->
                 <div class="numbertext">1 / 3</div> <!--  Opens and Closes div class numbertext -->
-                <img src="images/tempTopBar.jpg" style="width:100%">
+                <img src="tempTopBar.jpg" style="width:100%">
                 <div class="text">Castle Green, Broughty Ferry, Barnhill</div> <!--  Opens and Closes div class text -->
             </div> <!--  Closes div class mySlides fade -->
 
             <div class="mySlides fade">
                 <!-- Opens div class mySlides fade -->
                 <div class="numbertext">2 / 3</div> <!--  Opens and Closes div class numbertext -->
-                <img src="images/bpslogo.png" style="width:100%">
+                <img src="bpslogo.png" style="width:100%">
                 <div class="images/text">Barnhill Primary School</div> <!--  Opens and Closes div class text -->
             </div> <!--  Closes div class mySlides fade -->
 
             <div class="mySlides fade">
                 <!-- Opens div class mySlides fade -->
                 <div class="numbertext">3 / 3</div> <!--  Opens and Closes div class numbertext -->
-                <img src="images/headertest.jpeg" style="width:100%">
+                <img src="headertest.jpeg" style="width:100%">
                 <div class="text">Barnhill Primary Class Photo</div> <!--  Opens and Closes div class text -->
             </div> <!--  Closes div class mySlides fade -->
 
@@ -172,7 +172,8 @@
 
                         <li> To create a welcoming, safe and happy school where everyone is valued. </li>
 
-                        <li> To promote a sense of responsibility, respect and caring attitude in all pupils and staff.
+                        <li>
+                            To promote a sense of responsibility, respect and caring attitude in all pupils and staff.
                         </li>
 
                         <li>
@@ -187,7 +188,8 @@
                             both in and out of school.
                         </li>
 
-                        <li> To instill confidence in pupils and staff to develop skills for learning, life and work.
+                        <li>
+                            To instill confidence in pupils and staff to develop skills for learning, life and work.
                         </li>
 
                         <li> To encourage all to reflect and self-evaluate as they strive to achieve their goals. </li>
@@ -206,7 +208,7 @@
             <div id="BDiv" style="background-color: red; width: 100px;transition: width 2s;
         transition-timing-function: cubic-bezier(0.1,);">
                 <!-- Opens div id BDiv -->
-                <img src="images/B.png" class="letter" id="B" onclick="wordShow('believe', 'BDiv')">
+                <img src="B.png" class="letter" id="B" onclick="wordShow('believe', 'BDiv')">
 
                 <p id="believe" style="display: none; font-size: 50px;"> elieve </p> <!-- Closes div id BDiv -->
 
@@ -215,28 +217,28 @@
             <div id="RDiv" style="background-color: orange; width: 100px;transition: width 2s;
         transition-timing-function: cubic-bezier(0.1,0.1,0.2,0.1);">
                 <!-- Opens div id RDiv -->
-                <img src="images/R.png" class="letter" id="R" onclick="wordShow('respect', 'RDiv')">
+                <img src="R.png" class="letter" id="R" onclick="wordShow('respect', 'RDiv')">
                 <p id="respect" style="display: none; font-size: 50px;"> espect </p> <!-- Closes div id RDiv -->
             </div>
 
             <div id="IDiv" style="background-color: yellow; width: 100px;transition: width 2s;
         transition-timing-function: cubic-bezier(0.1,0.1,0.2,0.1);">
                 <!-- Opens div id IDiv -->
-                <img src="images/I.png" class="letter" id="I" onclick="wordShow('include', 'IDiv')">
+                <img src="I.png" class="letter" id="I" onclick="wordShow('include', 'IDiv')">
                 <p id="include" style="display: none; font-size: 50px;"> nclude </p> <!-- Closes div id IDiv -->
             </div>
 
             <div id="LDiv" style="background-color: rgb(43, 191, 43); width: 100px;transition: width 2s;
         transition-timing-function: cubic-bezier(0.1,0.1,0.2,0.1);">
                 <!-- Opens div id LDiv -->
-                <img src="images/L.png" class="letter" id="L" onclick="wordShow('learn', 'LDiv')">
+                <img src="L.png" class="letter" id="L" onclick="wordShow('learn', 'LDiv')">
                 <p id="learn" style="display: none; font-size: 50px;"> earn and achieve</p> <!-- Closes div id LDiv -->
             </div>
 
             <div id="L2Div" style="background-color: rgb(34, 130, 255); width: 100px;transition: width 2s;
         transition-timing-function: cubic-bezier(0.10.1,0.2,0.1);">
                 <!-- Opens div id L2Div -->
-                <img src="images/L.png" class="letter" id="L2" onclick="wordShow('look', 'L2Div')">
+                <img src="L.png" class="letter" id="L2" onclick="wordShow('look', 'L2Div')">
                 <p id="look" style="display: none; font-size: 50px;"> ook after each other</p>
                 <!-- Closes div id L2Div -->
             </div>
@@ -247,7 +249,7 @@
 
         <div id="HTmsg">
             <div id="HTmain">
-                <img src="images/woman.png" alt="Picture of head teacher" id="HTimg">
+                <img src="woman.png" alt="Picture of head teacher" id="HTimg">
                 <div id="HTtext">
                     <p> HEADTEACHER MESSAGE GOES HERE</p>
                 </div> <!-- Closes div id HTmsg -->
@@ -260,7 +262,8 @@
             <h2 onclick="shrinkText()"> - </h2>
             <h2 onclick="enlargeText()"> + </h2>
 
-            <h1 style="display:block;"> Fonts: </h2>
+            <h1 style="display:block;">
+                Fonts: </h2>
                 <h2 onclick="changeFont('Georgia')"> Georgia </h2>
                 <h2 onclick="changeFont('Courier New')"> Courier New </h2>
                 <h2 onclick="changeFont('Arial')"> Arial </h2>
@@ -279,26 +282,27 @@
 
             <a href="https://twitter.com/BarnhillPrimary">
                 <img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
             <a href="https://secure.glowscotland.org.uk/login/login.htm">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
             <a href="https://www.dundeecity.gov.uk/">
                 <img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api"
-                    alt="Dundee City Council" style="width: 60px; height:60px;">
+                     alt="Dundee City Council" style="width: 60px; height:60px;">
             </a>
             <a href="http://www.educationscotland.gov.uk/">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api"
-                    alt="Education Scotland" style="width: 60px; height:60px;">
+                     alt="Education Scotland" style="width: 60px; height:60px;">
             </a>
             <a href="https://app.parentpay.com/public/client/security/v2/#/login">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
 
-            <p id="cu"> <a href="contact.html"> Contact Us </a>
+            <p id="cu">
+                <a href="contact.html"> Contact Us </a>
                 <br> <span id="button" onclick="showSettings()">Settings</span>
             </p>
 
