--- a/staff.html
+++ b/staff.html
@@ -17,7 +17,7 @@
 
                 <ul>
 
-                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="/images/bpslogo.png"></a>
+                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="bpslogo.png"></a>
 
                     <li><a href="index.html">Home</a></li>
 
@@ -100,8 +100,9 @@
 
         <h1 id="pageTitle"> Staff</h1>
 
-        <h2 class="dropdownTitle" onclick="hideItem('staffLTable', 'SL')"> Leadership <p id="SL"
-                style="display:inline;">&#9660;</p>
+        <h2 class="dropdownTitle" onclick="hideItem('staffLTable', 'SL')">
+            Leadership <p id="SL"
+                          style="display:inline;">&#9660;</p>
         </h2>
 
         <table id="staffLTable">
@@ -122,8 +123,10 @@
                 <td> Mrs Lindsay Alexander </td>
             </tr>
         </table>
-        <h2 class="dropdownTitle" onclick="hideItem('staffSTable', 'SS')"> School <p id="SS" style="display:inline;">
-                &#9660;</p>
+        <h2 class="dropdownTitle" onclick="hideItem('staffSTable', 'SS')">
+            School <p id="SS" style="display:inline;">
+                &#9660;
+            </p>
         </h2>
         <table id="staffSTable">
             <tr>
@@ -163,8 +166,10 @@
                 <td> Miss Robertson <br> Mrs Goldsmith</td>
             </tr>
         </table>
-        <h2 class="dropdownTitle" onclick="hideItem('staffNTable', 'SN')"> Nursery <p id="SN" style="display:inline;">
-                &#9660;</p>
+        <h2 class="dropdownTitle" onclick="hideItem('staffNTable', 'SN')">
+            Nursery <p id="SN" style="display:inline;">
+                &#9660;
+            </p>
         </h2>
         <table id="staffNTable">
             <tr>
@@ -199,7 +204,8 @@
             <h2 onclick="shrinkText()"> - </h2>
             <h2 onclick="enlargeText()"> + </h2>
 
-            <h1 style="display:block;"> Fonts: </h2>
+            <h1 style="display:block;">
+                Fonts: </h2>
                 <h2 onclick="changeFont('Georgia')"> Georgia </h2>
                 <h2 onclick="changeFont('Courier New')"> Courier New </h2>
                 <h2 onclick="changeFont('Arial')"> Arial </h2>
@@ -217,26 +223,27 @@
 
             <a href="https://twitter.com/BarnhillPrimary">
                 <img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
             <a href="https://secure.glowscotland.org.uk/login/login.htm">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
             <a href="https://www.dundeecity.gov.uk/">
                 <img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api"
-                    alt="Dundee City Council" style="width: 60px; height:60px;">
+                     alt="Dundee City Council" style="width: 60px; height:60px;">
             </a>
             <a href="http://www.educationscotland.gov.uk/">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api"
-                    alt="Education Scotland" style="width: 60px; height:60px;">
+                     alt="Education Scotland" style="width: 60px; height:60px;">
             </a>
             <a href="https://app.parentpay.com/public/client/security/v2/#/login">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
 
-            <p id="cu"> <a href="contact.html"> Contact Us </a>
+            <p id="cu">
+                <a href="contact.html"> Contact Us </a>
                 <br> <span id="button" onclick="showSettings()">Settings</span>
             </p>
 
