--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
                 <ul>
 
-                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="/images/bpslogo.png"></a>
+                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="bpslogo.png"></a>
 
                     <li><a href="index.html">Home</a></li>
 
@@ -120,10 +120,9 @@
                 </div>
             </div>
 
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3672835063953!2d-2.8576694596827665!3d56.478660535962945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1708007344974!5m2!1sen!2suk"
-                id="map" width="400" height="400" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2203.3672835063953!2d-2.8576694596827665!3d56.478660535962945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48865ef4b049440f%3A0xbf911ad0ca76e7f8!2sBarnhill%20Primary%20School!5e0!3m2!1sen!2suk!4v1708007344974!5m2!1sen!2suk"
+                    id="map" width="400" height="400" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         </div>
 
@@ -134,7 +133,8 @@
             <h2 onclick="shrinkText()"> - </h2>
             <h2 onclick="enlargeText()"> + </h2>
 
-            <h1 style="display:block;"> Fonts: </h2>
+            <h1 style="display:block;">
+                Fonts: </h2>
                 <h2 onclick="changeFont('Georgia')"> Georgia </h2>
                 <h2 onclick="changeFont('Courier New')"> Courier New </h2>
                 <h2 onclick="changeFont('Arial')"> Arial </h2>
@@ -154,27 +154,28 @@
 
             <a href="https://twitter.com/BarnhillPrimary">
                 <img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
             <a href="https://secure.glowscotland.org.uk/login/login.htm">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
             <a href="https://www.dundeecity.gov.uk/">
                 <img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api"
-                    alt="Dundee City Council" style="width: 60px; height:60px;">
+                     alt="Dundee City Council" style="width: 60px; height:60px;">
             </a>
             <a href="http://www.educationscotland.gov.uk/">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api"
-                    alt="Education Scotland" style="width: 60px; height:60px;">
+                     alt="Education Scotland" style="width: 60px; height:60px;">
             </a>
             <a href="https://app.parentpay.com/public/client/security/v2/#/login">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
 
 
-            <p id="cu"> <a href="contact.html"> Contact Us </a>
+            <p id="cu">
+                <a href="contact.html"> Contact Us </a>
                 <br> <span id="button" onclick="showSettings()">Settings</span>
             </p>
 
