--- a/dates.html
+++ b/dates.html
@@ -19,7 +19,7 @@
 
                 <ul>
 
-                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="/images/bpslogo.png"></a>
+                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="bpslogo.png"></a>
 
                     <li><a href="index.html">Home</a></li>
 
@@ -127,9 +127,10 @@
         <div id="keyDts">
             <div id="dateLink">
                 <h2> Term Dates</a><br></h2>
-                <p> <Br>View the Term Dates <a
-                        href="https://www.dundeecity.gov.uk/service-area/children-and-families-service/education/school-term-dates">here</a>
-                    for dundee city council.</p>
+                <p>
+                    <Br>View the Term Dates <a href="https://www.dundeecity.gov.uk/service-area/children-and-families-service/education/school-term-dates">here</a>
+                    for dundee city council.
+                </p>
                 <Br>
                 <h2> Spring Term</h2>
 
@@ -166,25 +167,25 @@
                 margin-bottom: 5%;
             }
 
-            .calendar-container header {
-                display: flex;
-                padding: 25px 30px 10px;
-                justify-content: space-between;
-                height: 200px;
-                background-position: 75% 25%;
-                background-image: url(https://i2-prod.dailyrecord.co.uk/incoming/article27317686.ece/ALTERNATES/s810/0_barnhillprimary2.png);
-            }
+                .calendar-container header {
+                    display: flex;
+                    padding: 25px 30px 10px;
+                    justify-content: space-between;
+                    height: 200px;
+                    background-position: 75% 25%;
+                    background-image: url(https://i2-prod.dailyrecord.co.uk/incoming/article27317686.ece/ALTERNATES/s810/0_barnhillprimary2.png);
+                }
 
             header .calendar-navigation {
                 display: flex;
             }
 
-            header .calendar-navigation span {
-                line-height: 38px;
-                border-radius: 50%;
-                color: white;
-                font-size: 3em;
-            }
+                header .calendar-navigation span {
+                    line-height: 38px;
+                    border-radius: 50%;
+                    color: white;
+                    font-size: 3em;
+                }
 
             .calendar-navigation span:last-child {
                 margin-right: -10px;
@@ -204,34 +205,34 @@
                 padding: 20px;
             }
 
-            .calendar-body ul {
-                list-style: none;
-                flex-wrap: wrap;
-                display: flex;
-                text-align: center;
-            }
+                .calendar-body ul {
+                    list-style: none;
+                    flex-wrap: wrap;
+                    display: flex;
+                    text-align: center;
+                }
 
-            .calendar-body .calendar-dates {
-                margin-bottom: 20px;
-            }
+                .calendar-body .calendar-dates {
+                    margin-bottom: 20px;
+                }
 
-            .calendar-body li {
-                width: calc(100% / 7);
-                font-size: 1.07rem;
-                color: #414141;
-            }
+                .calendar-body li {
+                    width: calc(100% / 7);
+                    font-size: 1.07rem;
+                    color: #414141;
+                }
 
-            .calendar-body .calendar-weekdays li {
-                cursor: default;
-                font-weight: 500;
-            }
+                .calendar-body .calendar-weekdays li {
+                    cursor: default;
+                    font-weight: 500;
+                }
 
-            .calendar-body .calendar-dates li {
-                margin-top: 30px;
-                position: relative;
-                z-index: 1;
-                cursor: pointer;
-            }
+                .calendar-body .calendar-dates li {
+                    margin-top: 30px;
+                    position: relative;
+                    z-index: 1;
+                    cursor: pointer;
+                }
 
             .calendar-dates li.inactive {
                 color: #aaa;
@@ -348,7 +349,8 @@
             <h2 onclick="shrinkText()"> - </h2>
             <h2 onclick="enlargeText()"> + </h2>
 
-            <h1 style="display:block;"> Fonts: </h2>
+            <h1 style="display:block;">
+                Fonts: </h2>
                 <h2 onclick="changeFont('Georgia')"> Georgia </h2>
                 <h2 onclick="changeFont('Courier New')"> Courier New </h2>
                 <h2 onclick="changeFont('Arial')"> Arial </h2>
@@ -365,27 +367,28 @@
 
             <a href="https://twitter.com/BarnhillPrimary">
                 <img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
             <a href="https://secure.glowscotland.org.uk/login/login.htm">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
             <a href="https://www.dundeecity.gov.uk/">
                 <img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api"
-                    alt="Dundee City Council" style="width: 60px; height:60px;">
+                     alt="Dundee City Council" style="width: 60px; height:60px;">
             </a>
             <a href="http://www.educationscotland.gov.uk/">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api"
-                    alt="Education Scotland" style="width: 60px; height:60px;">
+                     alt="Education Scotland" style="width: 60px; height:60px;">
             </a>
             <a href="https://app.parentpay.com/public/client/security/v2/#/login">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
 
 
-            <p id="cu"> <a href="contact.html"> Contact Us </a>
+            <p id="cu">
+                <a href="contact.html"> Contact Us </a>
                 <br> <span id="button" onclick="showSettings()">Settings</span>
             </p>
 
