--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
 
                 <ul>
 
-                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="/images/bpslogo.png"></a>
+                    <a href="index.html"><img id="logo" alt="Barnhill Primary School Logo" src="bpslogo.png"></a>
 
                     <li><a href="index.html">Home</a></li>
 
@@ -109,10 +109,10 @@
                 <script src="script.js"></script>
 
                 <iframe width="760px" height="500px" src="https://sway.cloud.microsoft/s/nARFYvD7QQTki0DN/embed"
-                    frameborder="0" marginheight="0" marginwidth="0" max-width="100%"
-                    sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts"
-                    scrolling="no" style="display: block; border: none; max-width: 100%; max-height: 100vh"
-                    allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
+                        frameborder="0" marginheight="0" marginwidth="0" max-width="100%"
+                        sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts"
+                        scrolling="no" style="display: block; border: none; max-width: 100%; max-height: 100vh"
+                        allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
 
             </div>
         </div>
@@ -140,7 +140,8 @@
             <h2 onclick="shrinkText()"> - </h2>
             <h2 onclick="enlargeText()"> + </h2>
 
-            <h1 style="display:block;"> Fonts: </h2>
+            <h1 style="display:block;">
+                Fonts: </h2>
                 <h2 onclick="changeFont('Georgia')"> Georgia </h2>
                 <h2 onclick="changeFont('Courier New')"> Courier New </h2>
                 <h2 onclick="changeFont('Arial')"> Arial </h2>
@@ -157,27 +158,28 @@
 
             <a href="https://twitter.com/BarnhillPrimary">
                 <img src="https://www.phoronix.net/image.php?id=2023&image=twitter_x" alt="X (Twitter)"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
             <a href="https://secure.glowscotland.org.uk/login/login.htm">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.2e_o-42OuCuPqAyTXplgXAHaEc&pid=Api" alt="Glow RM Unify"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
             <a href="https://www.dundeecity.gov.uk/">
                 <img src="https://tse2.mm.bing.net/th?id=OIP.mOvYybLpOpVzVJpuYj5pjQHaFM&pid=Api"
-                    alt="Dundee City Council" style="width: 60px; height:60px;">
+                     alt="Dundee City Council" style="width: 60px; height:60px;">
             </a>
             <a href="http://www.educationscotland.gov.uk/">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.bawbOETZ8HJexKbpBS7ppwHaC9&pid=Api"
-                    alt="Education Scotland" style="width: 60px; height:60px;">
+                     alt="Education Scotland" style="width: 60px; height:60px;">
             </a>
             <a href="https://app.parentpay.com/public/client/security/v2/#/login">
                 <img src="https://tse3.mm.bing.net/th?id=OIP.VxZRig9HkfZhpBCFEdyNEwHaFj&pid=Api" alt="Parent Pay Portal"
-                    style="width: 60px; height:60px;">
+                     style="width: 60px; height:60px;">
             </a>
 
 
-            <p id="cu"> <a href="contact.html"> Contact Us </a>
+            <p id="cu">
+                <a href="contact.html"> Contact Us </a>
                 <br> <span id="button" onclick="showSettings()">Settings</span>
             </p>
 
