--- a/dates.html
+++ b/dates.html
@@ -193,6 +193,8 @@
 
             header .calendar-navigation span:hover {
                 background: #000000;
+                height: fit-content;
+                cursor:pointer;
             }
 
             header .calendar-current-date {
