--- a/contact.html
+++ b/contact.html
@@ -106,16 +106,17 @@
                 <div id="tel">
                     <h2> Tel: </h2>
                     <ul>
-                        <li> School: 01382 436993 </li>
+                        <li><a id="telLink" href="tel:01382436993">School: 01382 436993</a></li>
                     </ul>
                 </div>
 
                 <div id="email">
                     <h2>Email</h2>
                     <ul>
-                        <li>Principle: abruce174@dundeeschools.scot</li>
-                        <li>Deputy Head: psmith966@dundeeschools.scot</li>
-                        <li>School: barnhillprimary@dundeeschools.scot </li>
+                        <li><a href="mailto:abruce174@dundeeschools.scot">Head teacher: Angela Bruce</a></li>
+                        <li><a href="mailto:psmith966@dundeeschools.scot">Principal: Philip Smith</a></li>
+                        <br>      
+                        <li><a href="mailto:barnhillprimary@dundeeschools.scot">School: Barnhill Primary</a></li>
                     </ul>
                 </div>
             </div>
