--- a/dates.html
+++ b/dates.html
@@ -390,7 +390,7 @@
 
 
             <p id="cu">
-                <a href="contact.html"> Contact Us </a>
+                <a id="contactLink" href="contact.html"> Contact Us </a>
                 <br> <span id="button" onclick="showSettings()">Settings</span>
             </p>
 
