--- a/homeLearning.html
+++ b/homeLearning.html
@@ -472,7 +472,7 @@
             </a>
 
             <p id="cu">
-                <a href="contact.html"> Contact Us </a>
+                <a id="contactLink" href="contact.html"> Contact Us </a>
                 <br> <span id="button" onclick="showSettings()">Settings</span>
             </p>
 
