--- a/news.html
+++ b/news.html
@@ -179,7 +179,7 @@
 
 
             <p id="cu">
-                <a href="contact.html"> Contact Us </a>
+                <a id="contactLink"href="contact.html"> Contact Us </a>
                 <br> <span id="button" onclick="showSettings()">Settings</span>
             </p>
 
