--- a/uniform.html
+++ b/uniform.html
@@ -320,7 +320,7 @@
 
 
             <p id="cu">
-                <a href="contact.html"> Contact Us </a>
+                <a id="contactLink" href="contact.html"> Contact Us </a>
                 <br> <span id="button" onclick="showSettings()">Settings</span>
             </p>
             <p id="cr">&#169; Barnhill Primary School 2023</p>
